--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^2.2.1",
+    "flowbite-vue": "^0.1.2",
     "vue": "^3.3.11"
   },
   "devDependencies": {
